--- a/style.css
+++ b/style.css
@@ -15,15 +15,20 @@ body {
 
 header {
   /* your code */
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
 }
 
 main {
-  /* your code */
+  display: flex;
+  flex-direction: row;
 }
 main nav {
   border: .1rem solid purple;
   padding: 1rem;
-  /* your code */
+  display: flex;
+  flex-direction: column;
 }
 main a {
   width: 5rem;
@@ -33,7 +38,9 @@ main a {
 }
 
 .dog-list-container {
-  /* your code */
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
 .fluid-text {
